[package]
name = "orbit"
version = "0.3.0"
authors = ["Konstantinos Passadis"]
description = "Orbit is a performance-focused, post-quantum secure version control system"
edition = "2024"

[[bin]]
name = "orb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
fastcdc = "3.2" # Content-Defined Chunking
rayon = "1.8" # Parallel processing
git2 = "0.20" # Git interoperability (basic features)
